--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
-  <head style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
-    <meta name="viewport" content="width=device-width" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
-    <style type="text/css" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
+<html style="margin: 0;padding: 0">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width">
+    <style type="text/css">
       * {
         margin: 0;
         padding: 0;
@@ -53,7 +53,7 @@
       h6 {
         margin-bottom: 20px;
         line-height: 1.25;
-        color: #3e3e3e;
+        color: #333333;
       }
       h1 {
         font-size: 22px;
@@ -78,7 +78,7 @@
         margin-bottom: 20px;
       }
       strong {
-        color #3e3e3e;
+        color #333333;
       }
       .container {
         display: block !important;
@@ -132,36 +132,36 @@
     </style>
   </head>
   <body
-    style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;height: 100%;background: #efefef;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: none;width: 100% !important;">
+    style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;height: 100%;background: #efefef;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: none;width: 100% !important;">
     <table
       class="body-wrap"
-      style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;height: 100%;background: #efefef;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: none;width: 100% !important;">
-      <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
+      style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;height: 100%;background: #efefef;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: none;width: 100% !important;">
+      <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
         <td
           class="container"
-          style="margin: 0 auto !important;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;display: block !important;clear: both !important;max-width: 580px !important;">
-          <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;border-collapse: collapse;width: 100% !important;">
-            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
+          style="margin: 0 auto !important;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;display: block !important;clear: both !important;max-width: 580px !important;">
+          <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
+            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
               <td
                 align="center"
                 class="masthead"
-                style="margin: 0;padding: 40px 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;background: white;border-bottom: solid 3px #71c3c7;color: white;">
-                <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;font-weight: normal;margin-bottom: 20px;"><%= image_tag("logo-app.png", size: "130x29") %></p>
+                style="margin: 0;padding: 40px 0;font-size: 100%;font-family: 'Quicksand', sans-serif;background: white;border-bottom: solid 3px #71c3c7;color: white;">
+                <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"><%= image_tag("logo-app.png", size: "130x29") %></p>
               </td>
             </tr>
-            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
-              <td class="content" style="margin: 0;padding: 30px 35px;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;background: white;">
+            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
+              <td class="content" style="margin: 0;padding: 30px 35px;font-size: 100%;font-family: 'Quicksand', sans-serif;background: white;">
                 <%= yield %>
               </td>
             </tr>
           </table>
-          <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;border-collapse: collapse;width: 100% !important;">
-            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
-              <td class="content footer" align="center" style="margin: 0;padding: 30px 35px;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;background: none;">
-                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;">Sent by
-                  <a href="#" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;color: #888;text-decoration: none;font-weight: bold;">Blendin</a>, <a style="color: #888;text-decoration: none;">Tweede Jan van der Heijdenstraat 67-3, 1074 XR</a></p>
-                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;">
-                  <a href="mailto:info@blendinnow.nl" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;color: #888;text-decoration: none;font-weight: bold;">info@blendinnow.nl</a>
+          <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
+            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
+              <td class="content footer" align="center" style="margin: 0;padding: 30px 35px;font-size: 100%;font-family: 'Quicksand', sans-serif;background: none;">
+                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;">Sent by
+                  <a href="#" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #888;text-decoration: none;font-weight: bold;">Blendin</a>, <a style="color: #888;text-decoration: none;">Tweede Jan van der Heijdenstraat 67-3, 1074 XR</a></p>
+                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;">
+                  <a href="mailto:info@blendinnow.nl" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #888;text-decoration: none;font-weight: bold;">info@blendinnow.nl</a>
                 </p>
               </td>
             </tr>
