--- a/app/assets/stylesheets/components/DashboardCard.scss
+++ b/app/assets/stylesheets/components/DashboardCard.scss
@@ -11,7 +11,6 @@
 
 .DashCard{
   width: 290px;
-
 }
 
 .DashCardImgContainer{
@@ -30,11 +29,11 @@
 }
 
 .DashCardInfo > h1 {
-text-decoration-line: none !important;
-color: black;
-font-weight: 300;
-margin-top: 3px;
-margin-bottom:2px;
+  text-decoration-line: none !important;
+  color: black;
+  font-weight: 300;
+  margin-top: 3px;
+  margin-bottom:2px;
 }
 
 .DashUserTag{
@@ -57,7 +56,12 @@ margin-bottom:2px;
 
 .DashCardContainer-title{
   text-align: left;
-  padding-left: 20px
+  padding-left: 20px;
+  margin-bottom:3em;
+}
+
+.DashCardContainer-title h1 {
+  font-size: 20px;
 }
 
 .DashCardContainer-title  a {
@@ -72,5 +76,10 @@ margin-bottom:2px;
 }
 .DashCardContainer-title  a:hover{
   border-bottom: solid 8px #77CCCF;
+}
 
+@media only screen and (min-width: 40em) {
+  .DashCardContainer-title h1 {
+    font-size:2em;
+  }
 }
